fix: alignment in the sound buttons section

--- a/style/style.css
+++ b/style/style.css
@@ -25,10 +25,10 @@
 main {
 	display: grid;
 	width: 35rem;
-	height: 100%;
+	height: 66rem;
 	justify-self: center;
 	align-self: center;
-	gap: 7rem;
+	gap: 12rem;
 	padding: 1rem;
 }
 
@@ -71,7 +71,7 @@ main {
 	grid-template-columns: 1fr 1fr;
 	align-items: center;
 	justify-items: center;
-	gap: 2rem;
+	gap: 3rem;
 }
 
 .soundButton {
